# funfile

./: README.md  pyproject.toml  setup.py
.github/workflows/: sync.yml
doc/: optimization.md
home/bingtao/workspace/hubs/funread-dat/hubs/book/pkl/: url_info.pkl.bz2
src/funfile/compress/: __init__.py  allfile.py  tarfile.py
src/funfile/file/: concurrent.py
